--- a/kin-backup-and-restore/kin-backup-and-restore-ui-tests/build.gradle
+++ b/kin-backup-and-restore/kin-backup-and-restore-ui-tests/build.gradle
@@ -3,12 +3,12 @@ apply plugin: 'kotlin-android'
 apply plugin: 'jacoco'
 
 android {
-    compileSdkVersion 28
+    compileSdkVersion android_compilesdk_version
 
     defaultConfig {
         applicationId "kin.backup.and.restore.ui.tests"
-        minSdkVersion 18
-        targetSdkVersion 28
+        minSdkVersion 18 // This is only 18+ instead of android_minsdk_version b/c of the ui test automator requiring 18+
+        targetSdkVersion android_targetsdk_version
         versionCode 1
         versionName "1.0"
 
@@ -35,19 +35,20 @@ android {
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
+    implementation "com.android.support:appcompat-v7:$androidsupport_version"
+    implementation "com.android.support.constraint:constraint-layout:$constraintlayout_version"
     api project(':kin-backup-and-restore:kin-backup-and-restore-lib')
     api project(':kin-sdk:kin-sdk-lib')
-    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
-    implementation 'com.android.support:appcompat-v7:28.0.0'
-    implementation 'com.android.support.constraint:constraint-layout:1.1.3'
-    testImplementation 'junit:junit:4.12'
+
+    testImplementation "junit:junit:$junit_version"
     testImplementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
 
-    androidTestImplementation 'com.android.support.test:runner:1.0.2'
-    androidTestImplementation 'com.android.support.test:rules:1.0.2'
-    androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
-    androidTestImplementation 'com.android.support.test.espresso:espresso-intents:3.0.2'
-    androidTestImplementation 'com.android.support.test.uiautomator:uiautomator-v18:2.1.3'
+    androidTestImplementation "com.android.support.test:runner:$supporttest_version"
+    androidTestImplementation "com.android.support.test:rules:$supporttest_version"
+    androidTestImplementation "com.android.support.test.espresso:espresso-core:$espresso_version"
+    androidTestImplementation "com.android.support.test.espresso:espresso-intents:$espresso_version"
+    androidTestImplementation "com.android.support.test.uiautomator:uiautomator-v18:$uiautomator_version"
     androidTestImplementation "org.jetbrains.kotlin:kotlin-test-junit:$kotlin_version"
     androidTestImplementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
 }
