--- a/kin-sdk/kin-sdk-sample/build.gradle
+++ b/kin-sdk/kin-sdk-sample/build.gradle
@@ -1,11 +1,11 @@
 apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion 28
+    compileSdkVersion android_compilesdk_version
     defaultConfig {
         applicationId "kin.sdk.sample"
-        minSdkVersion 16
-        targetSdkVersion 26
+        minSdkVersion android_minsdk_version
+        targetSdkVersion android_targetsdk_version
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
@@ -33,12 +33,14 @@ android {
 
 dependencies {
     implementation fileTree(include: ['*.jar'], dir: 'libs')
-    androidTestImplementation('com.android.support.test.espresso:espresso-core:2.2.2', {
+    implementation "com.android.support:appcompat-v7:$androidsupport_version"
+    implementation "com.android.support.constraint:constraint-layout:$constraintlayout_version"
+    implementation "com.squareup.okhttp3:okhttp:$okhttp_version"
+    api project(':kin-sdk:kin-sdk-lib')
+
+    testImplementation "junit:junit:$junit_version"
+
+    androidTestImplementation("com.android.support.test.espresso:espresso-core:$espresso_version", {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
-    implementation 'com.android.support:appcompat-v7:28.0.0'
-    implementation 'com.android.support.constraint:constraint-layout:1.1.3'
-    testImplementation 'junit:junit:4.12'
-    api project(':kin-sdk:kin-sdk-lib')
-    implementation 'com.squareup.okhttp3:okhttp:3.9.1'
 }
