--- a/kin-sdk/kin-sdk-lib/build.gradle
+++ b/kin-sdk/kin-sdk-lib/build.gradle
@@ -84,7 +84,7 @@ artifacts {
 
 //jacoco unified code coverage
 jacoco {
-    toolVersion = '0.8.2'
+    toolVersion = jaccoco_version
 }
 
 tasks.withType(Test) {
