--- a/kin-backup-and-restore/kin-backup-and-restore-ui-tests/build.gradle
+++ b/kin-backup-and-restore/kin-backup-and-restore-ui-tests/build.gradle
@@ -55,7 +55,7 @@ dependencies {
 
 //jacoco unified code coverage
 jacoco {
-    toolVersion = '0.8.2'
+    toolVersion = jaccoco_version
 }
 
 tasks.withType(Test) {
