Should be able to put these back now.

--- a/kin-backup-and-restore/kin-backup-and-restore-sample/build.gradle
+++ b/kin-backup-and-restore/kin-backup-and-restore-sample/build.gradle
@@ -7,7 +7,7 @@ android {
 
         applicationId "kin.backupandrestore.sample"
         minSdkVersion android_minsdk_version
-        targetSdkVersion 28 //android_targetsdk_version
+        targetSdkVersion android_targetsdk_version
         versionCode 1
         versionName "1.0"
 
