Shouldn't need to do this anymore.

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,11 +1,9 @@
 sudo: required
 language: android
+dist: trusty
 
 services:
   - docker
-
-before_install:
-  - yes | sdkmanager "platforms;android-28"
 
 before_cache:
   - rm -f  $HOME/.gradle/caches/modules-2/modules-2.lock
