--- a/kin-sdk/kin-sdk-lib/build.gradle
+++ b/kin-sdk/kin-sdk-lib/build.gradle
@@ -8,11 +8,11 @@ apply plugin: 'maven'
 group = 'com.github.kinecosystem'
 
 android {
-    compileSdkVersion 28
+    compileSdkVersion android_compilesdk_version
 
     defaultConfig {
-        minSdkVersion 16
-        targetSdkVersion 26
+        minSdkVersion android_minsdk_version
+        targetSdkVersion android_targetsdk_version
         versionCode 1
         versionName "1.0"
         consumerProguardFiles 'proguard-rules.pro'
@@ -40,32 +40,28 @@ android {
 
 dependencies {
     implementation project(':kin-sdk:kin-base')
+    implementation "com.android.support:support-annotations:$androidsupport_version"
+    implementation "com.github.joshjdevl.libsodiumjni:libsodium-jni-aar:$sodium_version"
+    implementation "com.squareup.okhttp3:okhttp:$okhttp_version"
+    api "com.github.kinecosystem:kin-utils-android:$kinutilsandroid_version"
 
-    implementation 'com.android.support:support-annotations:28.0.0'
-
-    implementation 'com.github.joshjdevl.libsodiumjni:libsodium-jni-aar:2.0.1'
-    api 'com.github.kinecosystem:kin-utils-android:1.1'
-
-    testImplementation 'junit:junit:4.12'
-    testImplementation 'org.mockito:mockito-core:2.10.0'
-    testImplementation 'org.hamcrest:hamcrest-library:1.3'
-    testImplementation 'com.squareup.okhttp3:mockwebserver:3.9.1'
-    testImplementation 'org.robolectric:robolectric:4.3'
-    testImplementation 'com.google.code.gson:gson:2.8.2'
+    testImplementation "junit:junit:$junit_version"
+    testImplementation "org.mockito:mockito-core:$mockito_version"
+    testImplementation "org.hamcrest:hamcrest-library:$hamcrest_version"
+    testImplementation "com.squareup.okhttp3:mockwebserver:$okhttp_version"
+    testImplementation "org.robolectric:robolectric:$robolectric_version"
+    testImplementation "com.google.code.gson:gson:$gson_version"
     testImplementation 'org.json:json:20180813'
     testImplementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
     testImplementation "org.jetbrains.kotlin:kotlin-test-junit:$kotlin_version"
 
-    androidTestImplementation 'junit:junit:4.12'
-    androidTestImplementation 'org.mockito:mockito-core:2.10.0'
-    androidTestImplementation 'org.hamcrest:hamcrest-library:1.3'
-    androidTestImplementation 'com.android.support.test:runner:1.0.2'
-    androidTestImplementation 'org.mockito:mockito-android:2.10.0'
-    androidTestImplementation 'org.mockito:mockito-android:2.10.0'
-    androidTestImplementation 'com.android.support.test:runner:1.0.2'
-    androidTestImplementation 'com.android.support.test:rules:1.0.2'
-    androidTestImplementation 'org.hamcrest:hamcrest-library:1.3'
-    androidTestImplementation 'com.android.support:multidex:1.0.2'
+    androidTestImplementation "junit:junit:$junit_version"
+    androidTestImplementation "org.mockito:mockito-core:$mockito_version"
+    androidTestImplementation "org.mockito:mockito-android:$mockito_version"
+    androidTestImplementation "org.hamcrest:hamcrest-library:$hamcrest_version"
+    androidTestImplementation "com.android.support.test:runner:$supporttest_version"
+    androidTestImplementation "com.android.support.test:rules:$supporttest_version"
+    androidTestImplementation "com.android.support:multidex:$multidex_version"
     androidTestImplementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
     androidTestImplementation "org.jetbrains.kotlin:kotlin-test-junit:$kotlin_version"
 }
@@ -88,7 +84,7 @@ artifacts {
 
 //jacoco unified code coverage
 jacoco {
-    toolVersion = '0.8.2'
+    toolVersion = jaccoco_version
 }
 
 tasks.withType(Test) {
