- Adding an exponential backoff strategy as an OKHttp Response Interceptor - Some KinClient + KinClientInternal constructor cleanup - Some changes to tests to be more deterministic, faster, and cleaned some things up along the way - java 8 source compatibility so we can use lambdas (desugared as of gradle 3.x+) for final compilation

--- a/kin-backup-and-restore/kin-backup-and-restore-ui-tests/build.gradle
+++ b/kin-backup-and-restore/kin-backup-and-restore-ui-tests/build.gradle
@@ -31,6 +31,10 @@ android {
         androidTest.java.srcDirs += 'src/androidTest/kotlin'
     }
 
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_1_8
+        targetCompatibility JavaVersion.VERSION_1_8
+    }
 }
 
 dependencies {
