--- a/build.gradle
+++ b/build.gradle
@@ -46,6 +46,7 @@ buildscript {
         classpath "com.android.tools.build:gradle:$androidgradle_version"
         classpath "org.jacoco:org.jacoco.core:$jaccoco_version"
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+        classpath("com.github.dcendents:android-maven-gradle-plugin:2.1")
     }
 }
 
